# user-management-micro-service

./: .dockerignore  .env.sample  .flake8  .gitattributes  Dockerfile  README.md  Taskfile.yml  alembic.ini  create_admin.py  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_test.yml
project/: main.py
project/api/: main.py
scripts/: entrypoint_webapp.sh
testlib/client/: auth_client.py
tests/: test_client.py  test_healthcheck.py
tests/integration/: conftest.py  test_auth.py  test_healthcheck.py  test_reset_password.py  test_user_create.py  test_user_delete.py  test_user_read.py  test_user_update.py
tests/testlib/client/: auth_client.py
tests/unit/: conftest.py  test_tokens.py
user_management/: aws_settings.py  config.py  env_config.py  logger_settings.py  main.py  redis_settings.py
user_management/api/auth/: authentication.py  backends.py  exceptions.py  routes.py  schemas.py  services.py  tokens.py
user_management/api/users/: routes.py  schemas.py  services.py
user_management/api/utils/: dependencies.py  exceptions.py  hashers.py
user_management/aw_settings/: email_settings.py
user_management/aws/: service.py  settings.py
user_management/database/: db_settings.py  models.py  redis_settings.py
user_management/database/migrations/: env.py
user_management/database/migrations/versions/: 2023_10_26_2325-478c7a75fad7_01_initial.py  2023_10_29_1628-0c2c01786663_01_initial.py  2023_10_30_1332-659a17349c0d_01_initial.py  2023_11_10_1339-cfa2955d9526_02_role_unique_constraint.py  2023_11_12_1652-98c6e9ca0d2a_02_role_unique_constraint_add_timezone.py  2023_11_13_1134-6be8dab449e4_02_role_unique_constraint_add_timezone.py  2023_11_14_1607-642228edc9ce_02_role_unique_constraint_add_timezone.py  2023_11_15_1139-199c5bda72b5_02_role_unique_constraint_add_timezone.py  2024_01_30_1552-2a64670ec1f0_remove_roles.py
user_management/database/models/: __init__.py  group.py  role.py  user.py
user_management/managers/: user_manager.py
user_management/rabbit/: settings.py
user_management/utils/: manager.py
